# Augmented-Ascension-III

./: LICENSE  README.md  directory.json
src/: Cargo.toml  config.toml  game_settings.toml  game_settings.toml_old
src/assets/branding/: baibah.ai
src/char/Euclid/: main.toml
src/maps/mountains_1/: main.toml
src/maps/mountains_1/background/: mountains.ai
src/src/: action_traits.rs  assets.rs  background.rs  char.rs  collider.rs  draw.rs  game.rs  main.rs  maps.rs  post_processing.rs  projectile.rs  rigidbody.rs  universal.rs
src/src/shaders/: vignette.wgsl
