#![windows_subsystem = "windows"]

[package]
name = "double_a_batteries"
version = "0.4.3"
authors = ["Jean Du Plessis <jean1398reborn@gmail.com>"]
edition = '2021'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
image = "0.24.2"
bevy = {version="0.7.0", features=['serialize']}
rand = "0.8.5"
bevy_svg = { git = "https://github.com/jean1398reborn/bevy_svg" }
winit = "0.26.0"
toml = "0.5.8"
serde = "1.0.132"
bevy_mod_rounded_box = "0.1"
futures-lite = "1.12.0"
bitflags = "1.3"
bytemuck = "1.7.3"
anyhow = "1.0.52"
bevy-inspector-egui-rapier = {version= "0.3.0", features=["rapier2d"]}
semver = { version = "1.0.4", features = ["serde"] }
num = "0.4.0"
bevy_rapier2d = { rev="563bec4205f64c1d278b4cdd9eb7777e84e10091", git="https://github.com/dimforge/bevy_rapier", features=["simd-stable", "debug-render"]}
nalgebra = "0.30.1"
tokio = {version = "1.15.0", features = ["full"]}
igd = {version="0.12.0", features=["aio"]}
async-compat = "0.2.1"
bevy-inspector-egui = "0.11.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3